--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :nationality %><br>
     <%= f.text_field :nationality %>
   </div>
+  <div class="field">
+    <%= f.label :photo %><br>
+    <%= f.text_field :photo, placeholder:"Image URL" %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
