--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,33 +1,11 @@
 <p id="notice"><%= notice %></p>
+<div class="row">
+  <h1>Listing Players</h1>
 
-<h1>Listing Players</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Rating</th>
-      <th>Outfield</th>
-      <th>Nationality</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+  <div class="col-sm-12">
     <% @players.each do |player| %>
-      <tr>
-        <td><%= player.name %></td>
-        <td><%= player.rating %></td>
-        <td><%= player.outfield %></td>
-        <td><%= player.nationality %></td>
-        <td><%= link_to 'Show', player %></td>
-        <td><%= link_to 'Edit', edit_player_path(player) %></td>
-        <td><%= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <%= render partial: 'card', locals: {player: player} %><br>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Player', new_player_path %>
+  </div>
+  <%= link_to 'New Player', new_player_path, class:"btn btn-default" %>
+</div>
